GH-553 Implement RawDataProvider for ES Datadis